2020-XX-YY v. 2.1.0
---------------------
- Added a message to dnfdragora-update if user force a check for updates
- Added new Otions dialog
- Added Help dialog
- Fixed loop in case of GPG key missing if OnGPGImport is not received
- Removed MenuButtons and added MenuBar and new menus
- Cleaning info text if got empty result searching
- Added use of python regular expression  if searching into pacakge names or summaries.
  Search is performed into cached packages.

2020-06-17 v. 2.0.4
---------------------
- Fixed regression on starting --update that didn't honour updates filter
- Default view at first running is Groups and All, added for Fedora packager the option into
  system settings (/et/dnfdragora/dnfdragora.yaml) option all_updates to change this behaviour
  and show All the packages with To_update filter see dnfdragora.yaml.example
- try to avoid crash on exit from dnfdragora-update (https://bugzilla.redhat.com/show_bug.cgi?id=1839784
  and https://bugzilla.redhat.com/show_bug.cgi?id=1844707)

2020-06-06 v. 2.0.3
---------------------
- Trapped AccessDeniedError got when cancelling or giving a wrong password to
  avoid closing dnfdragora
- Fixed Build transaction cancelled (https://bugzilla.redhat.com/show_bug.cgi?id=1833623)
- dnfdragora-update honouring --icon-path option parameter see issue #55
- Added Message box for users if build transaction fails
- New icons (thanks to Carson Black)

2020-04-23 v. 2.0.2
---------------------
- Fixed another crash at startup with missing or empty settings 
  entry into configuration file

2020-04-13 v. 2.0.1
---------------------
- Fixed a crash at startup with missing settings entry into configuration file
- Fixed program closure if transaction is cancelled by user
- Fixed a crash at startup without configuration file

2020-04-04 v. 2.0.0
---------------------
- Massively reworked dnfdragora to be async and more reliable
- Improved logging and added logging to dnfdragora-updater