@@ -1,5 +1,9 @@
 2020-XX-YY v. 2.1.0
 ---------------------
+- Fixed dnfdragora view when all_updates is True into settings (system configuration file)
+- Fixed dnfdragora view when --update-only is passed as option
+- dnfdragora-update: hide menu when running dnfdragora 
+- dnfdragora-update: used a different icon to show that updates are present
 - Added a message to dnfdragora-update if user force a check for updates
 - Added new Otions dialog
 - Added Help dialog
